force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/SPEN_BusinessMarketSegmentRule__c.object-meta.xml
<CustomObject>
    <description>This is used for maintaining field values which defines the value of Business Market Segment field of case object</description>
    <label>Business Market Segment Rule</label>
    <nameField>
        <displayFormat>BMS-{0000}</displayFormat>
        <label>Business Market Segment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Market Segment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>