force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_BusinessMarketSegment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessMarketSegment__c</fullName>
    <label>Business Market Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>