force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_EndDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>