force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_JobType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobType__c</fullName>
    <description>This field is used for connections process</description>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UMANU033</fullName>
                <label>Additional Load</label>
            </value>
            <value>
                <fullName>UMANU034</fullName>
                <label>Additional Load (Sys Ext)</label>
            </value>
            <value>
                <fullName>UMANU044</fullName>
                <label>Cut Out Change</label>
            </value>
            <value>
                <fullName>UMANU040</fullName>
                <label>Disconnect/Reconnect (Estimate Required)</label>
            </value>
            <value>
                <fullName>UMANU009</fullName>
                <label>Disconnection</label>
            </value>
            <value>
                <fullName>UMANU053</fullName>
                <label>Disconnection Bulk</label>
            </value>
            <value>
                <fullName>UMANU052</fullName>
                <label>Disconnection Single</label>
            </value>
            <value>
                <fullName>UMANU045</fullName>
                <label>Disconnection Unmetered Supply - Existing</label>
            </value>
            <value>
                <fullName>UMANU046</fullName>
                <label>Disconnection Unmetered Supply - New High</label>
            </value>
            <value>
                <fullName>UMANU022</fullName>
                <label>Diversion(S)</label>
            </value>
            <value>
                <fullName>UMANU030</fullName>
                <label>Domestic CONV/REFURB System Ext (Vat)</label>
            </value>
            <value>
                <fullName>UMANU029</fullName>
                <label>Domestic Conversion / Refurb (VAT)</label>
            </value>
            <value>
                <fullName>UMANU047</fullName>
                <label>Earthing</label>
            </value>
            <value>
                <fullName>UMANU048</fullName>
                <label>Earthing (System Ext)</label>
            </value>
            <value>
                <fullName>UMANU024</fullName>
                <label>Embedded Generation</label>
            </value>
            <value>
                <fullName>UMANU049</fullName>
                <label>Embedded Generation - no plots</label>
            </value>
            <value>
                <fullName>UMANU039</fullName>
                <label>Isolator Switch (100 and Over)</label>
            </value>
            <value>
                <fullName>UMANU015</fullName>
                <label>Multiple Sup Apps(UMS) New Highway</label>
            </value>
            <value>
                <fullName>UMANU014</fullName>
                <label>Multiple Supply Applications (Metered)</label>
            </value>
            <value>
                <fullName>UMANU028</fullName>
                <label>Multiple Supply Applications(UMS) Existing</label>
            </value>
            <value>
                <fullName>UMANU026</fullName>
                <label>Multi Utility with Plots</label>
            </value>
            <value>
                <fullName>UMANU051</fullName>
                <label>Multi Utility With Plots (Out of Area)</label>
            </value>
            <value>
                <fullName>UMANU054</fullName>
                <label>New EV Supply</label>
            </value>
            <value>
                <fullName>UMANU055</fullName>
                <label>New EV Supply (System Extension)</label>
            </value>
            <value>
                <fullName>UMANU031</fullName>
                <label>New Supply</label>
            </value>
            <value>
                <fullName>UMANU032</fullName>
                <label>New Supply (System Extension)</label>
            </value>
            <value>
                <fullName>UMANU041</fullName>
                <label>New Temporary Supply</label>
            </value>
            <value>
                <fullName>UMANU042</fullName>
                <label>New Temporary Supply (System Ext)</label>
            </value>
            <value>
                <fullName>UMANU035</fullName>
                <label>New Unmetered Supply - Existing Highway</label>
            </value>
            <value>
                <fullName>UMANU036</fullName>
                <label>New Unmetered Supply - New Highway</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>