force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_MaximumPlotsNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaximumPlotsNumber__c</fullName>
    <label>Maximum Plots Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>