force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_MaximunLoad__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaximunLoad__c</fullName>
    <label>Maximun Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>