force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_MinimumLoad__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MinimumLoad__c</fullName>
    <description>This field is used for connection process</description>
    <label>Minimum Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>