force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_MinimumPlotsNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MinimumPlotsNumber__c</fullName>
    <label>Minimum Plots Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>