force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_NoofDaysforGSDueDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoofDaysforGSDueDate__c</fullName>
    <description>This field holds number of days after which GS due date will come</description>
    <label>No. of Days for GS Due Date</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>