force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_OfgemMarketSegment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OfgemMarketSegment__c</fullName>
    <label>Ofgem Market Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>