force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_POCVoltage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_POCVoltage__c</fullName>
    <label>POC Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>04</fullName>
                <label>132KV</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>EHV</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>HV</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>LV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>