force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_QuotationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_QuotationType__c</fullName>
    <label>Quotation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E2-UBUDGET</fullName>
                <label>Budget - Budgeting Offer</label>
            </value>
            <value>
                <fullName>E2-UFEAS</fullName>
                <label>Budget - Feasibility Study Offer</label>
            </value>
            <value>
                <fullName>E2-UBUDQT+</fullName>
                <label>Budget - Quote+ Offer</label>
            </value>
            <value>
                <fullName>E2-UNCOFXPR</fullName>
                <label>Fixed price - Fixed Price Alternative</label>
            </value>
            <value>
                <fullName>E2-UQUOTE</fullName>
                <label>Formal - Quotation Offer</label>
            </value>
            <value>
                <fullName>E2-UPREQUO</fullName>
                <label>Pre-Quotation Offer</label>
            </value>
            <value>
                <fullName>E2-UNCOPCQ</fullName>
                <label>PCQ Alternative</label>
            </value>
            <value>
                <fullName>E2-USLFIXPR</fullName>
                <label>Street Lighting Fixed Price Alternative</label>
            </value>
            <value>
                <fullName>E2-UVARIAN</fullName>
                <label>Variance Offer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>