force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_RequiredPhase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RequiredPhase__c</fullName>
    <label>Required Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Single Phase</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Split Phase</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Three Phase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>