force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/fields/SPEN_StartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>