force-app/main/default/objects/SPEN_BusinessMarketSegmentRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IsActive__c</columns>
    <columns>SPEN_JobType__c</columns>
    <columns>SPEN_QuotationType__c</columns>
    <columns>SPEN_CustomerClass__c</columns>
    <columns>SPEN_RequiredPhase__c</columns>
    <columns>SPEN_POCVoltage__c</columns>
    <columns>SPEN_BusinessMarketSegment__c</columns>
    <columns>SPEN_OfgemMarketSegment__c</columns>
    <columns>SPEN_MinimumPlotsNumber__c</columns>
    <columns>SPEN_MaximumPlotsNumber__c</columns>
    <columns>SPEN_MinimumLoad__c</columns>
    <columns>SPEN_MaximunLoad__c</columns>
    <columns>SPEN_MeteringVoltage__c</columns>
    <columns>SPEN_NoofDaysforGSDueDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_QuotationType__c</field>
        <operation>equals</operation>
        <value>E2-UBUDGET</value>
    </filters>
    <filters>
        <field>SPEN_POCVoltage__c</field>
        <operation>equals</operation>
        <value>01</value>
    </filters>
    <filters>
        <field>SPEN_RequiredPhase__c</field>
        <operation>equals</operation>
        <value>03</value>
    </filters>
    <filters>
        <field>SPEN_JobType__c</field>
        <operation>equals</operation>
        <value>UMANU031</value>
    </filters>
    <label>All</label>
</ListView>